[tool.poetry]
name = "pdf_chat"
version = "0.1.0"
description = ""
authors = ["Eric Boucher <eric.p.boucher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
openai = "^1.12.0"
llama-index = "^0.10.1"
nltk = "^3.8.1"
gradio = "^4.18.0"
pypdf = "^4.0.1"
supabase = "^2.3.4"
black = "^24.2.0"
isort = "^5.13.2"
llama-index-llms-openai = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
